Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <p>Beware and tamper with mnmlst at your peril.</p>
 
+<hr>
+
 <h2>
 <a id="approach" class="anchor" href="#approach" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>approach</h2>
 
@@ -54,6 +56,8 @@
 
 <p>Existentialism at its best.</p>
 
+<hr>
+
 <h2>
 <a id="typography" class="anchor" href="#typography" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>typography</h2>
 
@@ -68,6 +72,27 @@
 </ol>
 
 <p>You can obviously build on top of it. Once again, it’s up to you.</p>
+
+<hr>
+
+<h2>
+<a id="the-less-design-system" class="anchor" href="#the-less-design-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>the less design system</h2>
+
+<p>mnmlst might look simplistic at first sight but that’s only because its beauty lies in the LESS folder. </p>
+
+<p>In there you’ll find simple but powerful tools to customize the default css, which is actually just a foundation.</p>
+
+<ul>
+<li>You can automate vertical rhythm using mixins.</li>
+<li>You can customize typesetting by using any functional class you’ll find in the default CSS and additional utilities (small caps, text decoration, link color, etc.).</li>
+<li>You can build wrappers and apply borders, background color, etc.</li>
+<li>You can embed preset packages (namespaces) for <code>hr</code>, <code>sup</code>, <code>sub</code>, etc.</li>
+<li>You can use plugins to generate image grids, a swiss style freeform system, color palettes and design helpers (reading modes, baseline grid, pagination…).</li>
+</ul>
+
+<p>All it takes is a basic understanding of the LESS language.</p>
+
+<hr>
 
 <h2>
 <a id="the-waste-mnmlst-doesnt-support" class="anchor" href="#the-waste-mnmlst-doesnt-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>the waste mnmlst doesn’t support</h2>
