--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		  <li><strong>mnmlst is a toolbox:</strong> the framework was designed using <a href="http://lesscss.org">LESS CSS</a>, it offers multiple tools and can be customized.</li>
 		</ol>
 
-		<p>Out of the box, mnmlst doesn’t override anything, whether the defaults are pretty good or absolutely.</p>
+		<p>Out of the box, mnmlst doesn’t override anything, whether the defaults are pretty good or absolutely terrible.</p>
 
 		<p>Nope, <strong>nothing.</strong> </p>
 
