Update index following new plugins

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<ol>
 		  <li><strong>mnmlst has minimum impact:</strong> it relies on the Reading Systems’ defaults you can’t trust, it only corrects their oversights (e.g. disabling hyphens for headings, resetting HTML5 block elements, applying <code>max-width</code> for images, etc.). </li>
-		  <li><strong>mnmlst is freaking light:</strong> the minified css is just 853 bytes. You can achieve your custom typography in less than 2 kilobytes (beautified).</li>
+		  <li><strong>mnmlst is freaking light:</strong> the minified css is just 853&#160;bytes. You can achieve your custom typography in less than 2&#160;kilobytes (beautified).</li>
 		  <li><strong>mnmlst is functional:</strong> it follows <a href="https://blog.colepeters.com/building-and-shipping-functional-css/">FCSS principles</a> and provides single-purpose/reusable classes by default, it doesn’t declare styles for elements directly (excepted oversights).</li>
 		  <li><strong>mnmlst is a toolbox:</strong> the framework was designed using <a href="http://lesscss.org">LESS CSS</a>, it offers multiple tools and can be customized.</li>
 		</ol>
@@ -59,7 +59,7 @@
 		  <li>no <code>font-family</code> is declared, the default will be used (either the Reading System’s or the user’s);</li>
 		  <li>the <code>line-height</code> is declared for <code>body</code> as a <code>%</code> value; it’s like setting a baseline grid in InDesign: all other elements will inherit the <strong>computed</strong> value, as if the correct ratio/em value was automatically recomputed for each element, depending on its <code>font-size</code>);</li>
 		  <li>a <code>line-height</code> override is automatically pushed when the <code>font-size</code> of the class/element is bigger that the inherited <code>line-height</code>;</li>
-		  <li>the modular scale is diatonic—cos’, well, it’s been proving its worth for the last 400 years and that speaks volumes.</li>
+		  <li>the modular scale is diatonic—cos’, well, it’s been proving its worth for the last 400&#160;years and that speaks volumes.</li>
 		  <li>pagebreaks and alignments can be managed using functional classes as well.</li>
 		</ol>
 
@@ -74,11 +74,11 @@
 		<p>In there you’ll find simple but powerful tools to customize the default css, which is actually just a foundation.</p>
 
 		<ul>
-		  <li>You can automate vertical rhythm using mixins.</li>
+		  <li>You can automate vertical rhythm using mixins (i.e. <code>margin</code> and <code>padding</code> in both <code>em</code> or <code>rem</code>).</li>
 		  <li>You can customize typesetting by using any functional class you’ll find in the default CSS and additional utilities (small caps, text decoration, link color, etc.).</li>
 		  <li>You can build wrappers and apply borders, background color, etc.</li>
 		  <li>You can embed preset packages (namespaces) for <code>hr</code>, <code>sup</code>, <code>sub</code>, etc.</li>
-		  <li>You can use plugins to generate image grids, a swiss style freeform system, color palettes and design helpers (reading modes, baseline grid, pagination…).</li>
+		  <li>You can use plugins to generate tables, code, vertically centered images, image grids, a swiss style freeform system, color palettes and design helpers (reading modes, baseline grid, pagination…).</li>
 		</ul>
 
 		<p>All it takes is a basic understanding of the LESS language.</p>
