Improved readability of plugins (list)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,17 @@
 		  <li>You can customize typesetting by using any functional class you’ll find in the default CSS and additional utilities (small caps, text decoration, link color, etc.).</li>
 		  <li>You can build wrappers and apply borders, background color, etc.</li>
 		  <li>You can embed preset packages (namespaces) for <code>hr</code>, <code>sup</code>, <code>sub</code>, etc.</li>
-		  <li>You can use plugins to generate tables, code, vertically centered images, image grids, a swiss style freeform system, color palettes and design helpers (reading modes, baseline grid, pagination…).</li>
+		  <li>You can use plugins to generate:
+		   	<ul>
+		   	  <li>tables;</li> 
+		   	  <li>code;</li> 
+		   	  <li>vertically centered images;</li> 
+		   	  <li>image grids;</li> 
+		   	  <li>a swiss style freeform system;</li> 
+		   	  <li>color palettes;</li> 
+		   	  <li>design helpers (reading modes, baseline grid, pagination…).</li>
+		   	</ul>
+		  </li>
 		</ul>
 
 		<p>All it takes is a basic understanding of the LESS language.</p>
