Added missing stuff in plugins

--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
 		  <li>You can embed preset packages (namespaces) for <code>hr</code>, <code>sup</code>, <code>sub</code>, etc.</li>
 		  <li>You can use plugins to generate:
 		   	<ul>
-		   	  <li>tables;</li> 
-		   	  <li>code;</li> 
-		   	  <li>vertically centered images;</li> 
-		   	  <li>image grids;</li> 
+		   	  <li><code>@font-face</code> “imports” which behave well in eBooks’ Reading Systems;</li>
+		   	  <li>specific eBook font-stacks that were fine-tuned after extended research;</li>
+		   	  <li>minimalistic tables which won’t break vertical rhythm;</li> 
+		   	  <li>code with numbered lines;</li> 
+		   	  <li>vertically centered images—it takes little effort to customize it for headings, etc;</li> 
+		   	  <li>image grids—it takes little effort to customize it for toc entries, etc;</li> 
 		   	  <li>a swiss style freeform system;</li> 
 		   	  <li>color palettes;</li> 
 		   	  <li>design helpers (reading modes, baseline grid, pagination…).</li>
